<resources>
    <string name="app_name">ShopPet</string>

    <string name="menu_item_shop">Shop</string>
    <string name="menu_item_chat">Chat</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_filter">Filter</string>
    <string name="menu_item_sort">Sort</string>
    <string name="menu_item_theme">Set Theme</string>
    <string name="menu_item_logout">Sign Out</string>

    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_province">Province</string>
    <string name="hint_location">Location</string>
    <string name="hint_sex">Sex</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="hint_name">Name</string>
    <string name="hint_price">Price</string>
    <string name="hint_type">Type</string>
    <string name="hint_breed">Breed</string>
    <string name="hint_vaccine_status">Vaccine Status</string>
    <string name="hint_medical_records">Medical Records</string>
    <string name="hint_age">Age</string>
    <string name="hint_unit">Unit</string>
    <string name="hint_description">Description</string>
    <string name="hint_owner">Owner</string>
    <string name="hint_field">Field</string>
    <string name="hint_order">Order</string>
    <string name="hint_from">From</string>
    <string name="hint_to">To</string>
    <string name="hint_age_unit">Age Unit</string>
    <string name="hint_upload_date">Upload Date</string>
    <string name="sym_currency">₱</string>
    <string name="sym_range">-</string>

    <string name="btn_login">Sign In</string>
    <string name="btn_register">Register</string>
    <string name="btn_reset">Send Email</string>
    <string name="btn_select_photo">Select Photo</string>
    <string name="btn_take_photo">Take Photo</string>
    <string name="btn_upload_photo">Upload Photo</string>
    <string name="btn_agree">I Agree</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_resend">Resend</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">OK</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_save">Save</string>
    <string name="btn_report">Report</string>
    <string name="txt_btn_register"><u>Register Here</u></string>
    <string name="txt_btn_forgot">Forgot Password</string>
    <string name="txt_btn_login">Already have an account?</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_remove_filters">Remove Filters</string>
    <string name="btn_view">View</string>

    <string name="txt_enter_email">Enter email address!</string>
    <string name="txt_enter_password">Enter password!</string>
    <string name="txt_enter_full_name">Enter full name!</string>
    <string name="txt_enter_username">Enter valid username!</string>
    <string name="txt_enter_mobile">Enter valid mobile number!</string>
    <string name="txt_enter_location">Enter valid location!</string>
    <string name="txt_enter_sex">Select sex!</string>
    <string name="txt_enter_date_of_birth">Enter date of birth!</string>
    <string name="txt_confirm_password">Confirm your password!</string>
    <string name="txt_invalid_password">Password contains invalid characters!</string>
    <string name="txt_passwords_not_match">Passwords do not match!</string>
    <string name="txt_password_short">Password is too short!</string>
    <string name="txt_username_exists">Username already exists!</string>
    <string name="txt_verification_sent">Verification link sent to email!</string>
    <string name="txt_email_sent">Reset code sent to email!</string>
    <string name="txt_disclaimer">The information provided by the XEV GROUP from Bulacan State University on ShopPet: An Android-based Market Application for Acquiring Pets is for general informational purposes only. All information on the mobile application is provided in good faith, however we make no representation or warranty of any kind express or implied regarding the completeness of any information on the application ShopPet.\n\nThe structure of the project allows anyone to use the application freely and must be legally. Please be advised that nothing found here has necessarily been reviewed by people with the expertise required to provide you with complete, accurate or reliable information.</string>
    <string name="txt_account_unverified">Account is not verified! Resend email?</string>
    <string name="txt_permission_denied">Permission denied</string>
    <string name="txt_upload_success">Pet upload successful</string>
    <string name="txt_camera">Use the camera viewfinder to point and capture an image of a pet for upload.</string>
    <string name="txt_animal_undetected">An animal is not detected in this picture. Please select or take another clear image.</string>
    <string name="txt_select_type">Select type!</string>
    <string name="txt_enter_name">Enter name!</string>
    <string name="txt_enter_price">Enter price!</string>
    <string name="txt_enter_breed">Enter breed!</string>
    <string name="txt_enter_vaccine_status">Enter vaccine status!</string>
    <string name="txt_enter_medical_records">Enter medical records!</string>
    <string name="txt_enter_age">Enter age!</string>
    <string name="txt_enter_age_unit">Enter age unit!</string>
    <string name="txt_log_out">Are you sure you want to log out?</string>
    <string name="txt_cannot_log_out">Cannot log out!</string>
    <string name="txt_mark_pet_sold">Are you sure you want to mark this pet as sold?</string>
    <string name="txt_remove_pet">Are you sure you want to remove this?</string>
    <string name="txt_marked_pet_sold">Pet successfully marked as sold</string>
    <string name="txt_removed_pet">Pet successfully removed</string>
    <string name="txt_starred">Pet starred!</string>
    <string name="txt_unstarred">Pet unstarred!</string>
    <string name="txt_report_user">Are you sure you want to report this user?</string>
    <string name="txt_reported_user">Reported user!</string>
    <string name="txt_user_already_reported">You have already reported this user.</string>
    <string name="txt_remove_image">Are you sure you want to remove your photo?</string>
    <string name="txt_profile_updated">User profile updated!</string>
    <string name="txt_empty_message">Enter message!</string>
    <string name="txt_pet_updated">Pet details updated!</string>
    <string name="txt_reported">You have been reported too many times. You will not be able to upload pets.</string>

    <string name="lbl_all_fields_required">*All fields are required</string>
    <string name="lbl_sign_up">Sign Up To</string>
    <string name="lbl_username_password_field">Must be at least 8 characters</string>
    <string name="lbl_other">Other</string>
    <string name="lbl_loading">Loading</string>
    <string name="lbl_starred">Starred</string>
    <string name="lbl_unstarred">Unstarred</string>
    <string name="lbl_no_messages">No messages!</string>
    <string name="lbl_no_pets">No pets available!</string>
    <string name="lbl_no_filter">No Filter</string>
    <string name="lbl_range">Range</string>

    <string name="type_bird">Bird</string>
    <string name="type_cat">Cat</string>
    <string name="type_dog">Dog</string>
    <string name="type_fish">Fish</string>
    <string name="type_lizard">Lizard</string>
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="age_unit_days">Days</string>
    <string name="age_unit_weeks">Weeks</string>
    <string name="age_unit_months">Months</string>
    <string name="age_unit_years">Years</string>
    <string name="order_ascending">Ascending</string>
    <string name="order_descending">Descending</string>

    <string name="title_cannot_log_in">Cannot Log In</string>
    <string name="title_profile_image">Profile Image</string>
    <string name="title_pet_image">Pet Image</string>
    <string name="title_mark_as_sold">Mark as Sold</string>
    <string name="title_remove">Remove</string>
    <string name="title_remove_image">Remove Image</string>
    <string name="title_report_user">Report User</string>
    <string name="title_select_image">Select Image</string>
    <string name="title_cancel">Cancel?</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_profile">Profile</string>
    <string name="title_starred_pets">Starred Pets</string>
    <string name="title_my_pets">My Pets</string>
    <string name="btn_sell">Sell</string>
</resources>