<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <TextView
        android:id="@+id/txtTitle"
        style="?attr/textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_item_sort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtField"
        style="?attr/textAppearanceSubtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle" />

    <RadioGroup
        android:id="@+id/rdField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtField">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_age" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdBreed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_breed" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_price" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_type" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdUploadDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_upload_date" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtOrder"
        style="?attr/textAppearanceSubtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rdField" />

    <RadioGroup
        android:id="@+id/rdOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtOrder">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdAscending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_ascending" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdDescending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_descending" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClear"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_remove_filters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rdOrder" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        app:layout_constraintEnd_toStartOf="@id/btnOk"
        app:layout_constraintTop_toBottomOf="@id/rdOrder" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOk"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rdOrder" />

</androidx.constraintlayout.widget.ConstraintLayout>