<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <TextView
        android:id="@+id/txtTitle"
        style="?attr/textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_item_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtType"
        style="?attr/textAppearanceSubtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/chkBird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_bird"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtType" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/chkCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_cat"
        app:layout_constraintStart_toEndOf="@id/chkBird"
        app:layout_constraintTop_toBottomOf="@id/txtType" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/chkDog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_dog"
        app:layout_constraintStart_toEndOf="@id/chkCat"
        app:layout_constraintTop_toBottomOf="@id/txtType" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/chkFish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_fish"
        app:layout_constraintStart_toEndOf="@id/chkDog"
        app:layout_constraintTop_toBottomOf="@id/txtType" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/chkLizard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_lizard"
        app:layout_constraintStart_toEndOf="@id/chkFish"
        app:layout_constraintTop_toBottomOf="@id/txtType" />

    <TextView
        android:id="@+id/txtSex"
        style="?attr/textAppearanceSubtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_sex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chkBird" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/chkMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex_male"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSex" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/chkFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex_female"
        app:layout_constraintStart_toEndOf="@id/chkMale"
        app:layout_constraintTop_toBottomOf="@id/txtSex" />

    <TextView
        android:id="@+id/txtPrice"
        style="?attr/textAppearanceSubtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chkFemale" />


    <RadioGroup
        android:id="@+id/rdPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPrice">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdPriceNoFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_no_filter" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdPriceRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_range" />
    </RadioGroup>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/sliderPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="500"
        android:valueFrom="0"
        android:valueTo="10000"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rdPrice"
        app:values="@array/price"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtAgeUnit"
        style="?attr/textAppearanceSubtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_age_unit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sliderPrice" />

    <RadioGroup
        android:id="@+id/rdAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAgeUnit">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdAgeNoFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_no_filter" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdAgeDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_unit_days" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdAgeWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_unit_weeks" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdAgeMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_unit_months" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdAgeYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_unit_years" />
    </RadioGroup>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/sliderAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="100"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rdAge"
        app:values="@array/age"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClear"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_remove_filters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sliderAge" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        app:layout_constraintEnd_toStartOf="@id/btnOk"
        app:layout_constraintTop_toBottomOf="@id/sliderAge" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOk"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sliderAge" />

</androidx.constraintlayout.widget.ConstraintLayout>