<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="36dp"
    android:layout_marginEnd="36dp"
    android:orientation="vertical"
    tools:context=".ui.user.ProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageUser"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_person" />

    <TextView
        style="?attr/textAppearanceHeadline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hint_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtName"
        style="?attr/textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/txtEmailTitle"
        style="?attr/textAppearanceHeadline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hint_email_address"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtEmail"
        style="?attr/textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        tools:text="@tools:sample/full_names"
        tools:visibility="visible" />

    <TextView
        style="?attr/textAppearanceHeadline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hint_username"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtUsername"
        style="?attr/textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        tools:text="@tools:sample/first_names" />

    <TextView
        style="?attr/textAppearanceHeadline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hint_mobile_number"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtMobile"
        style="?attr/textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        tools:text="@tools:sample/us_phones" />

    <TextView
        style="?attr/textAppearanceHeadline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/hint_location"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtLocation"
        style="?attr/textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        tools:text="@tools:sample/cities" />

    <TextView
        style="?attr/textAppearanceHeadline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/hint_sex"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtSex"
        style="?attr/textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/txtDateOfBirthTitle"
        style="?attr/textAppearanceHeadline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/hint_date_of_birth"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtDateOfBirth"
        style="?attr/textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        tools:text="@tools:sample/date/mmddyy"
        tools:visibility="visible" />

</androidx.appcompat.widget.LinearLayoutCompat>